--- a/Citas_Recientes.css
+++ b/Citas_Recientes.css
@@ -97,7 +97,7 @@ nav ul{
     width: 600px;
     align-self: center;
     align-items: center;
-    margin-bottom: -418px;
+    margin-bottom: -158px;
 }
 
 .cuerpo3{
@@ -108,7 +108,7 @@ nav ul{
     align-self: center;
     align-items: center;
     position: relative;
-    top: 0px;
+    top: -245px;
     left: 672px;
 }
 
@@ -146,15 +146,15 @@ nav ul{
 
 .mas-detalles3 h2, .mas-detalles3 p {
     margin: 20px;
-    margin-bottom: 35px;
-    margin-top: 0px;
+    margin-bottom: 8px;
+    margin-top: 8px;
     margin-left: 27px;
 }
 
 .mas-detalles3 p{
     text-align: justify;
     color: black;
-    padding-bottom: 10px;
+    padding-bottom: 0px;
     margin-right: 20px;
     display: inline-flex;
 }
@@ -515,6 +515,29 @@ label {
     top: 0px;
     left: 700px;
     font-size: medium;
+}
+
+.boton_editar{
+    float: left;
+    padding: 20px;
+    color: white;
+    width: 16%;
+    position: relative;
+    top: -382px;
+    left: 1210px;
+    font-size: medium;
+    display: flex;
+}
+
+.edit{
+    padding-right: 20px;
+    text-decoration: underline;
+    color: rgb(49, 152, 255);
+}
+
+.delet{
+    text-decoration: underline;
+    color: red;
 }
 
 .btn_enviar{
